--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <ul>
                 <li><a href="#">English Saddles</a></li>
               </ul>
-              <li><a href="/Sub-pages/hal.html">Halters</a></li>
+              <li><a href="../Sub-pages/hal.html">Halters</a></li>
               <li><a href="/Sub-pages/engg.html">English Girths</a></li>
               <li><a href="/Sub-pages/mart.html">Martingle</a></li>
               <li><a href="/Sub-pages/ssl.html">Stirrups & Stirrups Leather</a></li>
@@ -66,7 +66,7 @@
               
               <li class="dropdown"><a href="#"><span>English Saddles</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="/Sub-pages/jump.html">Jumping</a></li>
+                  <li><a href="../Sub-pages/jump.html">Jumping</a></li>
                   <li><a href="/Sub-pages/endur.html">Endurance</a></li>
                   <li><a href="/Sub-pages/free.html">Freemax</a></li>
                   <li><a href="/Sub-pages/dress.html">Dressage</a></li>
