--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <ul>
                 <li><a href="#">English Saddles</a></li>
               </ul>
-              <li><a href="../Sub-pages/hal.html">Halters</a></li>
+              <li><a href="Sub-pages/hal.html">Halters</a></li>
               <li><a href="/Sub-pages/engg.html">English Girths</a></li>
               <li><a href="/Sub-pages/mart.html">Martingle</a></li>
               <li><a href="/Sub-pages/ssl.html">Stirrups & Stirrups Leather</a></li>
