--- a/index.html
+++ b/index.html
@@ -54,25 +54,25 @@
           <li><a href="#">Store</a></li>
           <li class="dropdown"><a href="#"><span> English Saddlery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="/Sub-pages/bb.html">Bridles & Browband</a></li>
+              <li><a href="bb.html">Bridles & Browband</a></li>
               <ul>
                 <li><a href="#">English Saddles</a></li>
               </ul>
-              <li><a href="Sub-pages/hal.html">Halters</a></li>
-              <li><a href="/Sub-pages/engg.html">English Girths</a></li>
-              <li><a href="/Sub-pages/mart.html">Martingle</a></li>
-              <li><a href="/Sub-pages/ssl.html">Stirrups & Stirrups Leather</a></li>
-              <li><a href="/Sub-pages/esp.html">English Saddle Pad</a></li>
+              <li><a href="hal.html">Halters</a></li>
+              <li><a href="engg.html">English Girths</a></li>
+              <li><a href="mart.html">Martingle</a></li>
+              <li><a href="ssl.html">Stirrups & Stirrups Leather</a></li>
+              <li><a href="esp.html">English Saddle Pad</a></li>
               
               <li class="dropdown"><a href="#"><span>English Saddles</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="../Sub-pages/jump.html">Jumping</a></li>
-                  <li><a href="/Sub-pages/endur.html">Endurance</a></li>
-                  <li><a href="/Sub-pages/free.html">Freemax</a></li>
-                  <li><a href="/Sub-pages/dress.html">Dressage</a></li>
-                  <li><a href="/Sub-pages/raci.html">Racing</a></li>
-                  <li><a href="/Sub-pages/all.html">All Purpose</a></li>
-                  <li><a href="/Sub-pages/polo.html">Polo</a></li>
+                  <li><a href="jump.html">Jumping</a></li>
+                  <li><a href="endur.html">Endurance</a></li>
+                  <li><a href="free.html">Freemax</a></li>
+                  <li><a href="dress.html">Dressage</a></li>
+                  <li><a href="raci.html">Racing</a></li>
+                  <li><a href="all.html">All Purpose</a></li>
+                  <li><a href="polo.html">Polo</a></li>
                 </ul>
               </li>
             </ul>
