--- a/all.html
+++ b/all.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="/assets/img/favicon.png" rel="icon">
-  <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,11 +19,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="/assets/css/main.css" rel="stylesheet">
@@ -42,7 +42,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <a href="/index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
+      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <i class="bi bi-horse"></i>
@@ -51,29 +51,29 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="/index.html" class="active">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="#">Store</a></li>
           <li class="dropdown"><a href="#"><span> English Saddlery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="/Sub-pages/bb.html">Bridles & Browband</a></li>
+              <li><a href="bb.html">Bridles & Browband</a></li>
               <ul>
                 <li><a href="#">English Saddles</a></li>
               </ul>
-              <li><a href="/Sub-pages/hal.html">Halters</a></li>
-              <li><a href="/Sub-pages/engg.html">English Girths</a></li>
-              <li><a href="/Sub-pages/mart.html">Martingle</a></li>
-              <li><a href="/Sub-pages/ssl.html">Stirrups & Stirrups Leather</a></li>
-              <li><a href="/Sub-pages/esp.html">English Saddle Pad</a></li>
+              <li><a href="hal.html">Halters</a></li>
+              <li><a href="engg.html">English Girths</a></li>
+              <li><a href="mart.html">Martingle</a></li>
+              <li><a href="ssl.html">Stirrups & Stirrups Leather</a></li>
+              <li><a href="esp.html">English Saddle Pad</a></li>
               
               <li class="dropdown"><a href="#"><span>English Saddles</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                    <li><a href="/Sub-pages/jump.html">Jumping</a></li>
-                    <li><a href="/Sub-pages/endur.html">Endurance</a></li>
-                    <li><a href="/Sub-pages/free.html">Freemax</a></li>
-                    <li><a href="/Sub-pages/dress.html">Dressage</a></li>
-                    <li><a href="/Sub-pages/raci.html">Racing</a></li>
-                    <li><a href="/Sub-pages/all.html">All Purpose</a></li>
-                    <li><a href="/Sub-pages/polo.html">Polo</a></li>
+                    <li><a href="jump.html">Jumping</a></li>
+                    <li><a href="endur.html">Endurance</a></li>
+                    <li><a href="free.html">Freemax</a></li>
+                    <li><a href="dress.html">Dressage</a></li>
+                    <li><a href="raci.html">Racing</a></li>
+                    <li><a href="all.html">All Purpose</a></li>
+                    <li><a href="polo.html">Polo</a></li>
                 </ul>
               </li>
             </ul>
