--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><a href="#">Store</a></li>
           <li class="dropdown"><a href="#"><span> English Saddlery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="bb.html">Bridles & Browband</a></li>
+              <li><a href="/bb.html">Bridles & Browband</a></li>
               <ul>
                 <li><a href="#">English Saddles</a></li>
               </ul>
