--- a/bb.html
+++ b/bb.html
@@ -148,7 +148,7 @@
         <div class="col-lg-6 text-center">
           <h2 style="font-size: medium;" >Welcome to Equistallion Saddlery</h2>
           <p>Quality at Finest</p>
-          <a href="/about/about.html" class="btn-get-started">About Us</a>
+          <a href="about/about.html" class="btn-get-started">About Us</a>
         </div>
       </div>
     </div>
@@ -335,14 +335,14 @@
   </div>
 
   <!-- Vendor JS Files -->
-  <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="/assets/vendor/aos/aos.js"></script>
-  <script src="/assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="/assets/js/main.js"></script>
+  <script src="assets/js/main.js"></script>
 
 </body>
 
