--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@
 
           <li class="dropdown"><a href="#"><span>Western Saddlery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="/west/hb.html">headstall & Breastplate</a></li>
-              <li><a href="/west/">Western Girths</a></li>
-              <li><a href="/west/wsp.html">wastern Saddles Pad</a></li>
-              <li><a href="/west/s.html">Sirrups</a></li>
+              <li><a href="west/hb.html">headstall & Breastplate</a></li>
+              <li><a href="west/">Western Girths</a></li>
+              <li><a href="west/wsp.html">wastern Saddles Pad</a></li>
+              <li><a href="west/s.html">Sirrups</a></li>
               <li class="dropdown"><a href="#"><span>Western Saddles</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="/west/ba.html">Barrel</a></li>
-                  <li><a href="/west/wa.html">Wade</a></li>
-                  <li><a href="/west/sh.html">Show</a></li>
-                  <li><a href="/west/rr.html">Roping & Ranch</a></li>
-                  <li><a href="/west/sy.html">Synthetic</a></li>
+                  <li><a href="west/ba.html">Barrel</a></li>
+                  <li><a href="west/wa.html">Wade</a></li>
+                  <li><a href="west/sh.html">Show</a></li>
+                  <li><a href="west/rr.html">Roping & Ranch</a></li>
+                  <li><a href="west/sy.html">Synthetic</a></li>
                 </ul>
               </li>
             </ul>
@@ -99,10 +99,10 @@
           
           <li class="dropdown"><a href="#"><span>Pet Supplies</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="/pet/col.html">Collars</a></li>
-              <li><a href="/pet/l.html">Leads</a></li>
-              <li><a href="/pet/ha.html">Harness</a></li>
-              <li><a href="/pet/t.html">Toys</a></li>
+              <li><a href="pet/col.html">Collars</a></li>
+              <li><a href="pet/l.html">Leads</a></li>
+              <li><a href="pet/ha.html">Harness</a></li>
+              <li><a href="pet/t.html">Toys</a></li>
             </ul>
           </li>
 
@@ -146,7 +146,7 @@
         <div class="col-lg-6 text-center">
           <h2 style="font-size: medium;" >Welcome to Equistallion Saddlery</h2>
           <p>Quality at Finest</p>
-          <a href="/about/about.html" class="btn-get-started">About Us</a>
+          <a href="about/about.html" class="btn-get-started">About Us</a>
         </div>
       </div>
     </div>
