--- a/bb.html
+++ b/bb.html
@@ -82,18 +82,18 @@
 
           <li class="dropdown"><a href="#"><span>Western Saddlery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="/west/ws.html">Western Saddles</a></li>
-              <li><a href="/west/hb.html">headstall & Breastplate</a></li>
-              <li><a href="/west/wg.html">Western Girths</a></li>
-              <li><a href="/west/wsp.html">wastern Saddles Pad</a></li>
-              <li><a href="/west/s.html">Sirrups</a></li>
+              <li><a href="west/ws.html">Western Saddles</a></li>
+              <li><a href="west/hb.html">headstall & Breastplate</a></li>
+              <li><a href="west/wg.html">Western Girths</a></li>
+              <li><a href="west/wsp.html">wastern Saddles Pad</a></li>
+              <li><a href="west/s.html">Sirrups</a></li>
               <li class="dropdown"><a href="#"><span>See more...</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="/west/ba.html">Barrel</a></li>
-                  <li><a href="/west/wa.html">Wade</a></li>
-                  <li><a href="/west/sh.html">Show</a></li>
-                  <li><a href="/west/rr.html">Roping & Ranch</a></li>
-                  <li><a href="/west/sy.html">Synthetic</a></li>
+                  <li><a href="west/ba.html">Barrel</a></li>
+                  <li><a href="west/wa.html">Wade</a></li>
+                  <li><a href="west/sh.html">Show</a></li>
+                  <li><a href="west/rr.html">Roping & Ranch</a></li>
+                  <li><a href="west/sy.html">Synthetic</a></li>
                 </ul>
               </li>
             </ul>
@@ -101,10 +101,10 @@
           
           <li class="dropdown"><a href="#"><span>Pet Supplies</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="/pet/col.html">Collars</a></li>
-              <li><a href="/pet/l.html">Leads</a></li>
-              <li><a href="/pet/ha.html">Harness</a></li>
-              <li><a href="/pet/t.html">Toys</a></li>
+              <li><a href="pet/col.html">Collars</a></li>
+              <li><a href="pet/l.html">Leads</a></li>
+              <li><a href="pet/ha.html">Harness</a></li>
+              <li><a href="pet/t.html">Toys</a></li>
             </ul>
           </li>
 
@@ -162,54 +162,54 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="/assets/img/English saddlery/Bridles & Browband/Bridle (1).jpg" class="img-fluid" alt="">
+              <img src="assets/img/English saddlery/Bridles & Browband/Bridle (1).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="/assets/img/English saddlery/Bridles & Browband/Bridle (1).jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/English saddlery/Bridles & Browband/Bridle (1).jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="/assets/img/English saddlery/Bridles & Browband/Bridle (2).jpg" class="img-fluid" alt="">
+              <img src="assets/img/English saddlery/Bridles & Browband/Bridle (2).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="/assets/img/English saddlery/Bridles & Browband/Bridle (2).jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/English saddlery/Bridles & Browband/Bridle (2).jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="/assets/img/English saddlery/Bridles & Browband/Bridle (3).jpg" class="img-fluid" alt="">
+              <img src="assets/img/English saddlery/Bridles & Browband/Bridle (3).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="/assets/img/English saddlery/Bridles & Browband/Bridle (3).jpg" title="Gallery 3" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/English saddlery/Bridles & Browband/Bridle (3).jpg" title="Gallery 3" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="/assets/img/English saddlery/Bridles & Browband/Bridle (4).jpg" class="img-fluid" alt="">
+              <img src="assets/img/English saddlery/Bridles & Browband/Bridle (4).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="/assets/img/English saddlery/Bridles & Browband/Bridle (4).jpg" title="Gallery 4" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/English saddlery/Bridles & Browband/Bridle (4).jpg" title="Gallery 4" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="/assets/img/English saddlery/Bridles & Browband/browband 1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/English saddlery/Bridles & Browband/browband 1.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="/assets/img/English saddlery/Bridles & Browband/browband 1.jpg" title="Gallery 5" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/English saddlery/Bridles & Browband/browband 1.jpg" title="Gallery 5" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="/assets/img/English saddlery/Bridles & Browband/browband 2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/English saddlery/Bridles & Browband/browband 2.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="/assets/img/English saddlery/Bridles & Browband/browband 2.jpg" title="Gallery 6" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/English saddlery/Bridles & Browband/browband 2.jpg" title="Gallery 6" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
