--- a/all.html
+++ b/all.html
@@ -26,13 +26,12 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="/assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: PhotoFolio - v1.2.0
-  * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * Template Name: PhotoFolio - v1.2.0 
+  * Template URL: Not Fixed
+  * Author: Samarth Mishra
   ======================================================== -->
 </head>
 
@@ -67,13 +66,13 @@
               
               <li class="dropdown"><a href="#"><span>English Saddles</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                    <li><a href="jump.html">Jumping</a></li>
-                    <li><a href="endur.html">Endurance</a></li>
-                    <li><a href="free.html">Freemax</a></li>
-                    <li><a href="dress.html">Dressage</a></li>
-                    <li><a href="raci.html">Racing</a></li>
-                    <li><a href="all.html">All Purpose</a></li>
-                    <li><a href="polo.html">Polo</a></li>
+                  <li><a href="jump.html">Jumping</a></li>
+                  <li><a href="endur.html">Endurance</a></li>
+                  <li><a href="free.html">Freemax</a></li>
+                  <li><a href="dress.html">Dressage</a></li>
+                  <li><a href="raci.html">Racing</a></li>
+                  <li><a href="all.html">All Purpose</a></li>
+                  <li><a href="polo.html">Polo</a></li>
                 </ul>
               </li>
             </ul>
@@ -82,18 +81,17 @@
 
           <li class="dropdown"><a href="#"><span>Western Saddlery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="/west/ws.html">Western Saddles</a></li>
-              <li><a href="/west/hb.html">headstall & Breastplate</a></li>
-              <li><a href="/west/wg.html">Western Girths</a></li>
-              <li><a href="/west/wsp.html">wastern Saddles Pad</a></li>
-              <li><a href="/west/s.html">Sirrups</a></li>
-              <li class="dropdown"><a href="#"><span>See more...</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+              <li><a href="west/hb.html">headstall & Breastplate</a></li>
+              <li><a href="west/">Western Girths</a></li>
+              <li><a href="west/wsp.html">wastern Saddles Pad</a></li>
+              <li><a href="west/s.html">Sirrups</a></li>
+              <li class="dropdown"><a href="#"><span>Western Saddles</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="/west/ba.html">Barrel</a></li>
-                  <li><a href="/west/wa.html">Wade</a></li>
-                  <li><a href="/west/sh.html">Show</a></li>
-                  <li><a href="/west/rr.html">Roping & Ranch</a></li>
-                  <li><a href="/west/sy.html">Synthetic</a></li>
+                  <li><a href="west/ba.html">Barrel</a></li>
+                  <li><a href="west/wa.html">Wade</a></li>
+                  <li><a href="west/sh.html">Show</a></li>
+                  <li><a href="west/rr.html">Roping & Ranch</a></li>
+                  <li><a href="west/sy.html">Synthetic</a></li>
                 </ul>
               </li>
             </ul>
@@ -101,10 +99,10 @@
           
           <li class="dropdown"><a href="#"><span>Pet Supplies</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="/pet/col.html">Collars</a></li>
-              <li><a href="/pet/l.html">Leads</a></li>
-              <li><a href="/pet/ha.html">Harness</a></li>
-              <li><a href="/pet/t.html">Toys</a></li>
+              <li><a href="pet/col.html">Collars</a></li>
+              <li><a href="pet/l.html">Leads</a></li>
+              <li><a href="pet/ha.html">Harness</a></li>
+              <li><a href="pet/t.html">Toys</a></li>
             </ul>
           </li>
 
@@ -148,7 +146,7 @@
         <div class="col-lg-6 text-center">
           <h2 style="font-size: medium;" >Welcome to Equistallion Saddlery</h2>
           <p>Quality at Finest</p>
-          <a href="/about/about.html" class="btn-get-started">About Us</a>
+          <a href="about/about.html" class="btn-get-started">About Us</a>
         </div>
       </div>
     </div>
@@ -162,18 +160,18 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="/assets/img/English saddlery/English Saddles/All Purpose/all purpose.jpg" class="img-fluid" alt="">
+              <img src="assets/img/English saddlery/English Saddles/All Purpose/all purpose.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="/assets/img/English saddlery/English Saddles/All Purpose/all purpose.jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/English saddlery/English Saddles/All Purpose/all purpose.jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="/assets/img/English saddlery/English Saddles/All Purpose/synthetic eng.webp" class="img-fluid" alt="">
+              <img src="assets/img/English saddlery/English Saddles/All Purpose/synthetic eng.webp" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="/assets/img/English saddlery/English Saddles/All Purpose/synthetic eng.webp" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/English saddlery/English Saddles/All Purpose/synthetic eng.webp" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
@@ -335,14 +333,14 @@
   </div>
 
   <!-- Vendor JS Files -->
-  <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="/assets/vendor/aos/aos.js"></script>
-  <script src="/assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="/assets/js/main.js"></script>
+  <script src="assets/js/main.js"></script>
 
 </body>
 
