--- a/hal.html
+++ b/hal.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="../assets/img/favicon.png" rel="icon">
-  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,20 +19,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="/assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: PhotoFolio - v1.2.0
-  * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * Template Name: PhotoFolio - v1.2.0 
+  * Template URL: Not Fixed
+  * Author: Samarth Mishra
   ======================================================== -->
 </head>
 
@@ -42,7 +41,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <a href="/index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
+      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <i class="bi bi-horse"></i>
@@ -51,29 +50,29 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="/index.html" class="active">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="#">Store</a></li>
           <li class="dropdown"><a href="#"><span> English Saddlery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="/Sub-pages/bb.html">Bridles & Browband</a></li>
+              <li><a href="bb.html">Bridles & Browband</a></li>
               <ul>
                 <li><a href="#">English Saddles</a></li>
               </ul>
-              <li><a href="/Sub-pages/hal.html">Halters</a></li>
-              <li><a href="/Sub-pages/engg.html">English Girths</a></li>
-              <li><a href="/Sub-pages/mart.html">Martingle</a></li>
-              <li><a href="/Sub-pages/ssl.html">Stirrups & Stirrups Leather</a></li>
-              <li><a href="/Sub-pages/esp.html">English Saddle Pad</a></li>
+              <li><a href="hal.html">Halters</a></li>
+              <li><a href="engg.html">English Girths</a></li>
+              <li><a href="mart.html">Martingle</a></li>
+              <li><a href="ssl.html">Stirrups & Stirrups Leather</a></li>
+              <li><a href="esp.html">English Saddle Pad</a></li>
               
               <li class="dropdown"><a href="#"><span>English Saddles</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                    <li><a href="/Sub-pages/jump.html">Jumping</a></li>
-                    <li><a href="/Sub-pages/endur.html">Endurance</a></li>
-                    <li><a href="/Sub-pages/free.html">Freemax</a></li>
-                    <li><a href="/Sub-pages/dress.html">Dressage</a></li>
-                    <li><a href="/Sub-pages/raci.html">Racing</a></li>
-                    <li><a href="/Sub-pages/all.html">All Purpose</a></li>
-                    <li><a href="/Sub-pages/polo.html">Polo</a></li>
+                  <li><a href="jump.html">Jumping</a></li>
+                  <li><a href="endur.html">Endurance</a></li>
+                  <li><a href="free.html">Freemax</a></li>
+                  <li><a href="dress.html">Dressage</a></li>
+                  <li><a href="raci.html">Racing</a></li>
+                  <li><a href="all.html">All Purpose</a></li>
+                  <li><a href="polo.html">Polo</a></li>
                 </ul>
               </li>
             </ul>
@@ -82,18 +81,17 @@
 
           <li class="dropdown"><a href="#"><span>Western Saddlery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="/west/ws.html">Western Saddles</a></li>
-              <li><a href="/west/hb.html">headstall & Breastplate</a></li>
-              <li><a href="/west/wg.html">Western Girths</a></li>
-              <li><a href="/west/wsp.html">wastern Saddles Pad</a></li>
-              <li><a href="/west/s.html">Sirrups</a></li>
-              <li class="dropdown"><a href="#"><span>See more...</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+              <li><a href="west/hb.html">headstall & Breastplate</a></li>
+              <li><a href="west/">Western Girths</a></li>
+              <li><a href="west/wsp.html">wastern Saddles Pad</a></li>
+              <li><a href="west/s.html">Sirrups</a></li>
+              <li class="dropdown"><a href="#"><span>Western Saddles</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="/west/ba.html">Barrel</a></li>
-                  <li><a href="/west/wa.html">Wade</a></li>
-                  <li><a href="/west/sh.html">Show</a></li>
-                  <li><a href="/west/rr.html">Roping & Ranch</a></li>
-                  <li><a href="/west/sy.html">Synthetic</a></li>
+                  <li><a href="west/ba.html">Barrel</a></li>
+                  <li><a href="west/wa.html">Wade</a></li>
+                  <li><a href="west/sh.html">Show</a></li>
+                  <li><a href="west/rr.html">Roping & Ranch</a></li>
+                  <li><a href="west/sy.html">Synthetic</a></li>
                 </ul>
               </li>
             </ul>
@@ -101,10 +99,10 @@
           
           <li class="dropdown"><a href="#"><span>Pet Supplies</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="/pet/col.html">Collars</a></li>
-              <li><a href="/pet/l.html">Leads</a></li>
-              <li><a href="/pet/ha.html">Harness</a></li>
-              <li><a href="/pet/t.html">Toys</a></li>
+              <li><a href="pet/col.html">Collars</a></li>
+              <li><a href="pet/l.html">Leads</a></li>
+              <li><a href="pet/ha.html">Harness</a></li>
+              <li><a href="pet/t.html">Toys</a></li>
             </ul>
           </li>
 
@@ -148,7 +146,7 @@
         <div class="col-lg-6 text-center">
           <h2 style="font-size: medium;" >Welcome to Equistallion Saddlery</h2>
           <p>Quality at Finest</p>
-          <a href="/about/about.html" class="btn-get-started">About Us</a>
+          <a href="about/about.html" class="btn-get-started">About Us</a>
         </div>
       </div>
     </div>
@@ -162,18 +160,18 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="/assets/img/English saddlery/Halters/black english halter.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/English saddlery/Halters/black english halter.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="/assets/img/English saddlery/Halters/black english halter.jpeg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/English saddlery/Halters/black english halter.jpeg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="/assets/img/English saddlery/Halters/brown english halter.jpg" class="img-fluid" alt="">
+              <img src="assets/img/English saddlery/Halters/brown english halter.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="/assets/img/English saddlery/Halters/brown english halter.jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/English saddlery/Halters/brown english halter.jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
@@ -335,14 +333,14 @@
   </div>
 
   <!-- Vendor JS Files -->
-  <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="/assets/vendor/aos/aos.js"></script>
-  <script src="/assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="/assets/js/main.js"></script>
+  <script src="assets/js/main.js"></script>
 
 </body>
 
