--- a/dress.html
+++ b/dress.html
@@ -14,6 +14,10 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -81,17 +85,17 @@
 
           <li class="dropdown"><a href="#"><span>Western Saddlery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="west/hb.html">headstall & Breastplate</a></li>
-              <li><a href="west/">Western Girths</a></li>
-              <li><a href="west/wsp.html">wastern Saddles Pad</a></li>
-              <li><a href="west/s.html">Sirrups</a></li>
+              <li><a href="hb.html">headstall & Breastplate</a></li>
+              <li><a href="wg.html">Western Girths</a></li>
+              <li><a href="wsp.html">wastern Saddles Pad</a></li>
+              <li><a href="s.html">Sirrups</a></li>
               <li class="dropdown"><a href="#"><span>Western Saddles</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="west/ba.html">Barrel</a></li>
-                  <li><a href="west/wa.html">Wade</a></li>
-                  <li><a href="west/sh.html">Show</a></li>
-                  <li><a href="west/rr.html">Roping & Ranch</a></li>
-                  <li><a href="west/sy.html">Synthetic</a></li>
+                  <li><a href="ba.html">Barrel</a></li>
+                  <li><a href="wa.html">Wade</a></li>
+                  <li><a href="sh.html">Show</a></li>
+                  <li><a href="rr.html">Roping & Ranch</a></li>
+                  <li><a href="sy.html">Synthetic</a></li>
                 </ul>
               </li>
             </ul>
@@ -99,10 +103,10 @@
           
           <li class="dropdown"><a href="#"><span>Pet Supplies</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="pet/col.html">Collars</a></li>
-              <li><a href="pet/l.html">Leads</a></li>
-              <li><a href="pet/ha.html">Harness</a></li>
-              <li><a href="pet/t.html">Toys</a></li>
+              <li><a href="col.html">Collars</a></li>
+              <li><a href="l.html">Leads</a></li>
+              <li><a href="ha.html">Harness</a></li>
+              <li><a href="t.html">Toys</a></li>
             </ul>
           </li>
 
