--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@
 
           <li class="dropdown"><a href="#"><span>Western Saddlery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="west/hb.html">headstall & Breastplate</a></li>
-              <li><a href="west/">Western Girths</a></li>
-              <li><a href="west/wsp.html">wastern Saddles Pad</a></li>
-              <li><a href="west/s.html">Sirrups</a></li>
+              <li><a href="hb.html">headstall & Breastplate</a></li>
+              <li><a href="wg.html">Western Girths</a></li>
+              <li><a href="wsp.html">wastern Saddles Pad</a></li>
+              <li><a href="s.html">Sirrups</a></li>
               <li class="dropdown"><a href="#"><span>Western Saddles</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
-                  <li><a href="west/ba.html">Barrel</a></li>
-                  <li><a href="west/wa.html">Wade</a></li>
-                  <li><a href="west/sh.html">Show</a></li>
-                  <li><a href="west/rr.html">Roping & Ranch</a></li>
-                  <li><a href="west/sy.html">Synthetic</a></li>
+                  <li><a href="ba.html">Barrel</a></li>
+                  <li><a href="wa.html">Wade</a></li>
+                  <li><a href="sh.html">Show</a></li>
+                  <li><a href="rr.html">Roping & Ranch</a></li>
+                  <li><a href="sy.html">Synthetic</a></li>
                 </ul>
               </li>
             </ul>
@@ -99,10 +99,10 @@
           
           <li class="dropdown"><a href="#"><span>Pet Supplies</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="pet/col.html">Collars</a></li>
-              <li><a href="pet/l.html">Leads</a></li>
-              <li><a href="pet/ha.html">Harness</a></li>
-              <li><a href="pet/t.html">Toys</a></li>
+              <li><a href="col.html">Collars</a></li>
+              <li><a href="l.html">Leads</a></li>
+              <li><a href="ha.html">Harness</a></li>
+              <li><a href="t.html">Toys</a></li>
             </ul>
           </li>
 
