--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="/contact.html" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-chat-left-text-fill"></i></a>
+  <a href="contact.html" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-chat-left-text-fill"></i></a>
 
   <div id="preloader">
     <div class="line"></div>
