--- a/contact.html
+++ b/contact.html
@@ -241,25 +241,26 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>PhotoFolio</span></strong>. All Rights Reserved
+    <footer id="footer" class="footer">
+      <div class="container">
+        <div class="copyright">
+          &copy; Copyright <strong><span>equistallion.com</span></strong>. All Rights Reserved
+        </div>
+        <div class="credits">
+          <!-- All the links in the footer should remain intact. -->
+          <!-- You can delete the links only if you purchased the pro version. -->
+          <!-- Licensing information: mailto:stackdevsamarth@programmer.net -->
+          <!-- Purchase the pro version with working PHP/AJAX contact here: https://www.linkedin.com/in/thesamarthmishra/ -->
+          Designed by <a href="https://www.linkedin.com/in/thesamarthmishra/">Samarthmishra</a>
+        </div>
       </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+    </footer><!-- End Footer -->
+  
+    <a href="contact.html" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-chat-left-text-fill"></i></a>
+  
+    <div id="preloader">
+      <div class="line"></div>
     </div>
-  </footer><!-- End Footer -->
-
-  <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <div id="preloader">
-    <div class="line"></div>
-  </div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
