--- a/index.html
+++ b/index.html
@@ -108,18 +108,18 @@
 
           <li class="dropdown"><a href="#"><span>others</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="gallery.html">Polo Halters & Belts</a></li>
-              <li><a href="gallery.html">Boots</a></li>
-              <li><a href="gallery.html">Chaps</a></li>
-              <li><a href="gallery.html">Rope Halter</a></li>
-              <li><a href="gallery.html">Rugs</a></li>
-              <li><a href="gallery.html">Covers</a></li>
-              <li><a href="gallery.html">Bandages</a></li>
-              <li><a href="gallery.html">Fly Veli</a></li>
-              <li><a href="gallery.html">Haynet</a></li>
-              <li><a href="gallery.html">Bell Boots</a></li>
-              <li><a href="gallery.html">Blankets</a></li>
-              <li><a href="gallery.html">Saddle</a></li>
+              <li><a href="phb.html">Polo Halters & Belts</a></li>
+              <li><a href="">Boots</a></li>
+              <li><a href="">Chaps</a></li>
+              <li><a href="">Rope Halter</a></li>
+              <li><a href="">Rugs</a></li>
+              <li><a href="">Covers</a></li>
+              <li><a href="">Bandages</a></li>
+              <li><a href="">Fly Veli</a></li>
+              <li><a href="">Haynet</a></li>
+              <li><a href="">Bell Boots</a></li>
+              <li><a href="">Blankets</a></li>
+              <li><a href="">Saddle</a></li>
             </ul>
           </li>
 
