--- a/bla.html
+++ b/bla.html
@@ -108,18 +108,18 @@
 
           <li class="dropdown"><a href="#"><span>others</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="gallery.html">Polo Halters & Belts</a></li>
-              <li><a href="gallery.html">Boots</a></li>
-              <li><a href="gallery.html">Chaps</a></li>
-              <li><a href="gallery.html">Rope Halter</a></li>
-              <li><a href="gallery.html">Rugs</a></li>
-              <li><a href="gallery.html">Covers</a></li>
-              <li><a href="gallery.html">Bandages</a></li>
-              <li><a href="gallery.html">Fly Veli</a></li>
-              <li><a href="gallery.html">Haynet</a></li>
-              <li><a href="gallery.html">Bell Boots</a></li>
-              <li><a href="gallery.html">Blankets</a></li>
-              <li><a href="gallery.html">Saddle</a></li>
+                <li><a href="phb.html">Polo Halters & Belts</a></li>
+                <li><a href="b.html">Boots</a></li>
+                <li><a href="ch.html">Chaps</a></li>
+                <li><a href="rh.html">Rope Halter</a></li>
+                <li><a href="r.html">Rugs</a></li>
+                <li><a href="co.html">Covers</a></li>
+                <li><a href="ban.html">Bandages</a></li>
+                <li><a href="fv.html">Fly Veli</a></li>
+                <li><a href="hay.html">Haynet</a></li>
+                <li><a href="bb.html">Bell Boots</a></li>
+                <li><a href="bla.html">Blankets</a></li>
+                <li><a href="sa.html">Saddle</a></li>
             </ul>
           </li>
 
@@ -160,9 +160,9 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/Other Saddlery Products/Bandages/bandages.jpg" class="img-fluid" alt="">
+              <img src="assets/img/Other Saddlery Products/" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/Other Saddlery Products/Bandages/bandages.jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/Other Saddlery Products/" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
