--- a/dress.html
+++ b/dress.html
@@ -112,18 +112,18 @@
 
           <li class="dropdown"><a href="#"><span>others</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="gallery.html">Polo Halters & Belts</a></li>
-              <li><a href="gallery.html">Boots</a></li>
-              <li><a href="gallery.html">Chaps</a></li>
-              <li><a href="gallery.html">Rope Halter</a></li>
-              <li><a href="gallery.html">Rugs</a></li>
-              <li><a href="gallery.html">Covers</a></li>
-              <li><a href="gallery.html">Bandages</a></li>
-              <li><a href="gallery.html">Fly Veli</a></li>
-              <li><a href="gallery.html">Haynet</a></li>
-              <li><a href="gallery.html">Bell Boots</a></li>
-              <li><a href="gallery.html">Blankets</a></li>
-              <li><a href="gallery.html">Saddle</a></li>
+              <li><a href="phb.html">Polo Halters & Belts</a></li>
+              <li><a href="b.html">Boots</a></li>
+              <li><a href="ch.html">Chaps</a></li>
+              <li><a href="rh.html">Rope Halter</a></li>
+              <li><a href="r.html">Rugs</a></li>
+              <li><a href="co.html">Covers</a></li>
+              <li><a href="ban.html">Bandages</a></li>
+              <li><a href="fv.html">Fly Veli</a></li>
+              <li><a href="hay.html">Haynet</a></li>
+              <li><a href="bb.html">Bell Boots</a></li>
+              <li><a href="bla.html">Blankets</a></li>
+              <li><a href="sa.html">Saddle</a></li>
             </ul>
           </li>
 
