--- a/contact.html
+++ b/contact.html
@@ -208,7 +208,7 @@
         <div class="row justify-content-center mt-4">
 
           <div class="col-lg-9">
-            <form action="#link here" method="post" role="form" class="php-email-form">
+            <form action="mailto:samarthmishra655@gmail.com" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
