--- a/rr.html
+++ b/rr.html
@@ -163,7 +163,7 @@
               <img src="assets/img/western saddlery/Western Saddles/Roping & Ranch/3.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/western saddlery/Western Saddles/Roping & Ranch/3.jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -172,7 +172,7 @@
               <img src="assets/img/western saddlery/Western Saddles/Roping & Ranch/roping (1).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/western saddlery/Western Saddles/Roping & Ranch/roping (1).jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -181,7 +181,7 @@
               <img src="assets/img/western saddlery/Western Saddles/Roping & Ranch/roping (2).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/western saddlery/Western Saddles/Roping & Ranch/roping (2).jpg" title="Gallery 3" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -190,7 +190,7 @@
               <img src="assets/img/western saddlery/Western Saddles/Roping & Ranch/roping (3).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/western saddlery/Western Saddles/Roping & Ranch/roping (3).jpg" title="Gallery 4" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -199,7 +199,7 @@
               <img src="/assets/img/English saddlery/Bridles & Browband/browband 1.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="/assets/img/English saddlery/Bridles & Browband/browband 1.jpg" title="Gallery 5" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -208,7 +208,7 @@
               <img src="/assets/img/English saddlery/Bridles & Browband/browband 2.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="/assets/img/English saddlery/Bridles & Browband/browband 2.jpg" title="Gallery 6" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -217,7 +217,7 @@
               <img src="assets/img/gallery/gallery-7.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-7.jpg" title="Gallery 7" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -226,7 +226,7 @@
               <img src="assets/img/gallery/gallery-8.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-8.jpg" title="Gallery 8" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -235,7 +235,7 @@
               <img src="assets/img/gallery/gallery-9.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-9.jpg" title="Gallery 9" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -244,7 +244,7 @@
               <img src="assets/img/gallery/gallery-10.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-10.jpg" title="Gallery 10" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -253,7 +253,7 @@
               <img src="assets/img/gallery/gallery-11.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-11.jpg" title="Gallery 11" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -262,7 +262,7 @@
               <img src="assets/img/gallery/gallery-12.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-12.jpg" title="Gallery 12" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -271,7 +271,7 @@
               <img src="assets/img/gallery/gallery-13.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-13.jpg" title="Gallery 13" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -280,7 +280,7 @@
               <img src="assets/img/gallery/gallery-14.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-14.jpg" title="Gallery 14" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -289,7 +289,7 @@
               <img src="assets/img/gallery/gallery-15.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-15.jpg" title="Gallery 15" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -298,7 +298,7 @@
               <img src="assets/img/gallery/gallery-16.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-16.jpg" title="Gallery 16" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div> -->
