--- a/dress.html
+++ b/dress.html
@@ -167,7 +167,7 @@
               <img src="assets/img/English saddlery/English Saddles/Dressage/dressage (1).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/English saddlery/English Saddles/Dressage/dressage (1).jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -176,7 +176,7 @@
               <img src="assets/img/English saddlery/English Saddles/Dressage/dressage (2).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/English saddlery/English Saddles/Dressage/dressage (2).jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -185,7 +185,7 @@
               <img src="assets/img/English saddlery/Bridles & Browband/Bridle (3).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="/assets/img/English saddlery/Bridles & Browband/Bridle (3).jpg" title="Gallery 3" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -194,7 +194,7 @@
               <img src="/assets/img/English saddlery/Bridles & Browband/Bridle (4).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="/assets/img/English saddlery/Bridles & Browband/Bridle (4).jpg" title="Gallery 4" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -203,7 +203,7 @@
               <img src="/assets/img/English saddlery/Bridles & Browband/browband 1.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="/assets/img/English saddlery/Bridles & Browband/browband 1.jpg" title="Gallery 5" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -212,7 +212,7 @@
               <img src="/assets/img/English saddlery/Bridles & Browband/browband 2.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="/assets/img/English saddlery/Bridles & Browband/browband 2.jpg" title="Gallery 6" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
          </div>
@@ -221,7 +221,7 @@
               <img src="assets/img/gallery/gallery-7.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-7.jpg" title="Gallery 7" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -230,7 +230,7 @@
               <img src="assets/img/gallery/gallery-8.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-8.jpg" title="Gallery 8" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -239,7 +239,7 @@
               <img src="assets/img/gallery/gallery-9.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-9.jpg" title="Gallery 9" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -248,7 +248,7 @@
               <img src="assets/img/gallery/gallery-10.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-10.jpg" title="Gallery 10" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -257,7 +257,7 @@
               <img src="assets/img/gallery/gallery-11.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-11.jpg" title="Gallery 11" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -266,7 +266,7 @@
               <img src="assets/img/gallery/gallery-12.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-12.jpg" title="Gallery 12" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -275,7 +275,7 @@
               <img src="assets/img/gallery/gallery-13.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-13.jpg" title="Gallery 13" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -284,7 +284,7 @@
               <img src="assets/img/gallery/gallery-14.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-14.jpg" title="Gallery 14" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -293,7 +293,7 @@
               <img src="assets/img/gallery/gallery-15.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-15.jpg" title="Gallery 15" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -302,7 +302,7 @@
               <img src="assets/img/gallery/gallery-16.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-16.jpg" title="Gallery 16" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div> -->
