--- a/hal.html
+++ b/hal.html
@@ -303,7 +303,7 @@
               <img src="assets/img/English saddlery/Halters/black english halter.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/English saddlery/Halters/black english halter.jpeg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -312,7 +312,7 @@
               <img src="assets/img/English saddlery/Halters/brown english halter.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/English saddlery/Halters/brown english halter.jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -321,7 +321,7 @@
               <img src="assets/img/gallery/gallery-3.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-3.jpg" title="Gallery 3" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -330,7 +330,7 @@
               <img src="assets/img/gallery/gallery-4.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-4.jpg" title="Gallery 4" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -339,7 +339,7 @@
               <img src="assets/img/gallery/gallery-5.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-5.jpg" title="Gallery 5" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -348,7 +348,7 @@
               <img src="assets/img/gallery/gallery-6.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-6.jpg" title="Gallery 6" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -357,7 +357,7 @@
               <img src="assets/img/gallery/gallery-7.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-7.jpg" title="Gallery 7" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -366,7 +366,7 @@
               <img src="assets/img/gallery/gallery-8.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-8.jpg" title="Gallery 8" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -375,7 +375,7 @@
               <img src="assets/img/gallery/gallery-9.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-9.jpg" title="Gallery 9" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -384,7 +384,7 @@
               <img src="assets/img/gallery/gallery-10.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-10.jpg" title="Gallery 10" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -393,7 +393,7 @@
               <img src="assets/img/gallery/gallery-11.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-11.jpg" title="Gallery 11" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -402,7 +402,7 @@
               <img src="assets/img/gallery/gallery-12.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-12.jpg" title="Gallery 12" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -411,7 +411,7 @@
               <img src="assets/img/gallery/gallery-13.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-13.jpg" title="Gallery 13" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -420,7 +420,7 @@
               <img src="assets/img/gallery/gallery-14.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-14.jpg" title="Gallery 14" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -429,7 +429,7 @@
               <img src="assets/img/gallery/gallery-15.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-15.jpg" title="Gallery 15" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>
@@ -438,7 +438,7 @@
               <img src="assets/img/gallery/gallery-16.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/gallery/gallery-16.jpg" title="Gallery 16" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div>-->
