--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2 style="font-size: medium;" >Welcome to Equistallion Saddlery</h2>
-          <p>Quality at Finest</p>
+          <h2 style="font-size: smaall;" >Equistallion Saddlery .co</h2>
+          <p>Quality at it's Finest</p>
           <a href="about/about.html" class="btn-get-started">About Us</a>
         </div>
       </div>
@@ -164,7 +164,7 @@
               <img src="assets/img/English saddlery/Bridles & Browband/Bridle (1).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/English saddlery/Bridles & Browband/Bridle (1).jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -173,7 +173,7 @@
               <img src="assets/img/English saddlery/English Girths/english girth.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/English saddlery/English Girths/english girth.jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -182,7 +182,7 @@
               <img src="assets/img/English saddlery/English Saddle Pad/english saddle pad (1).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/English saddlery/English Saddle Pad/english saddle pad (1).jpg" title="Gallery 3" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -191,7 +191,7 @@
               <img src="assets/img/English saddlery/English Saddles/All Purpose/all purpose.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/English saddlery/English Saddles/All Purpose/all purpose.jpg" title="Gallery 4" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -200,7 +200,7 @@
               <img src="assets/img/English saddlery/Halters/black english halter.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/English saddlery/Halters/black english halter.jpeg" title="Gallery 5" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -209,7 +209,7 @@
               <img src="assets/img/English saddlery/Martingle/Martingles.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/English saddlery/Martingle/Martingles.jpg" title="Gallery 6" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -218,7 +218,7 @@
               <img src="assets/img/English saddlery/Strirrups & Stirrups Leather/english stirups (1).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/English saddlery/Strirrups & Stirrups Leather/english stirups (1).jpg" title="Gallery 7" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -227,7 +227,7 @@
               <img src="assets/img/Other Saddlery Products/Bandages/bandages.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/Other Saddlery Products/Bandages/bandages.jpg" title="Gallery 8" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -236,7 +236,7 @@
               <img src="assets/img/Other Saddlery Products/Bareback Pad/bearback pad (1).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/Other Saddlery Products/Bareback Pad/bearback pad (1).jpg" title="Gallery 9" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -245,7 +245,7 @@
               <img src="assets/img/Other Saddlery Products/Bell boots/bell boots (2).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/Other Saddlery Products/Bell boots/bell boots (2).jpg" title="Gallery 10" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -254,7 +254,7 @@
               <img src="assets/img/Other Saddlery Products/Breeches/brreches (1).jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/Other Saddlery Products/Breeches/brreches (1).jpeg" title="Gallery 11" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -263,7 +263,7 @@
               <img src="assets/img/Other Saddlery Products/Chaps/chaps.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/Other Saddlery Products/Chaps/chaps.jpg" title="Gallery 12" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -272,7 +272,7 @@
               <img src="assets/img/Other Saddlery Products/Covers/saddle covers.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/Other Saddlery Products/Covers/saddle covers.jpg" title="Gallery 13" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -281,7 +281,7 @@
               <img src="assets/img/Other Saddlery Products/Fly veil/all mix fly veil.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/Other Saddlery Products/Fly veil/all mix fly veil.jpg" title="Gallery 14" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -290,7 +290,7 @@
               <img src="assets/img/Other Saddlery Products/Haynet/LLTHA-102.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/Other Saddlery Products/Haynet/LLTHA-102.jpg" title="Gallery 15" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -299,7 +299,7 @@
               <img src="assets/img/Other Saddlery Products/Polo Halters & Belts/Polo Belt (1).jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <a href="assets/img/Other Saddlery Products/Polo Halters & Belts/Polo Belt (1).jpg" title="Gallery 16" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="https://api.whatsapp.com/send/?phone=7078008727&text&type=phone_number&app_absent=0" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="contact.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
