--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <h2 style="font-size: smaall;" >Equistallion Saddlery .co</h2>
+          <h2 style="font-size: smaall;" >Welcome To Equistallion Saddlery Co.</h2>
           <p>Quality at it's Finest</p>
           <a href="about/about.html" class="btn-get-started">About Us</a>
         </div>
