--- a/index.html
+++ b/index.html
@@ -307,6 +307,57 @@
         </div>
 
       </div>
+
+      <div class="page-header d-flex align-items-center">
+        <div class="container position-relative">
+          <div class="row d-flex justify-content-center">
+            <div class="col-lg-6 text-center">
+              <h2>Contact</h2>
+              <p>We provide high quality genuine handmade products made with love in the given time by the professionals.</p>
+  
+            </div>
+          </div>
+        </div>
+      </div><!-- End Page Header -->
+  
+      <!-- ======= Contact Section ======= -->
+      <section id="contact" class="contact">
+        <div class="container">
+  
+          <div class="row gy-4 justify-content-center">
+  
+            <div class="col-lg-3">
+              <div class="info-item d-flex">
+                <i class="bi bi-geo-alt flex-shrink-0"></i>
+                <div>
+                  <h4>Location:</h4>
+                  <p>14/5 A civil lines Kanpur (208001) | INDIA</p>
+                </div>
+              </div>
+            </div><!-- End Info Item -->
+  
+            <div class="col-lg-3">
+              <div class="info-item d-flex">
+                <i class="bi bi-envelope flex-shrink-0"></i>
+                <div>
+                  <h4>Email:</h4>
+                  <p>zirconoverseas@gmail.com</p>
+                </div>
+              </div>
+            </div><!-- End Info Item -->
+  
+            <div class="col-lg-3">
+              <div class="info-item d-flex">
+                <i class="bi bi-phone flex-shrink-0"></i>
+                <div>
+                  <h4>Call:</h4>
+                  <p>+91-7078008727</p>
+                </div>
+              </div>
+            </div><!-- End Info Item -->
+  
+          </div>
+          
     </section><!-- End Gallery Section -->
 
   </main><!-- End #main -->
